--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -4,10 +4,7 @@
 <head th:fragment="head-fragment(title)">
     <meta charset="utf-8">
     <title th:text="${title}">首页</title>
-    <link rel="shortcut icon" th:href="@{/images/my-bbs-icon.png}">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="My-BBS,bbs,论坛,SpringBoot论坛,论坛系统,Java论坛,SpringBoot,spring-boot,java">
-    <meta name="description" content="My BBS 是由 SpringBoot + Mybatis + Thymeleaf 等技术实现的 Java BBS论坛系统">
     <link rel="stylesheet" href="https://cdn.staticfile.org/layui/2.5.7/css/layui.css">
     <link rel="stylesheet" th:href="@{/css/global.css}">
     <link rel="stylesheet" th:href="@{/css/index.css}">
@@ -17,20 +14,8 @@
     <div class="layui-container">
         <div class="layui-header">
             <a class="fly-logo" href="/">
-                <!--            <img th:src="@{/images/my-bbs-logo.png}" alt="My-BBS">-->
                 <div style="color:#009688; height: 60px;line-height: 60px;font-size:20px">BBS</div>
             </a>
-            <!--        <ul class="layui-nav fly-nav layui-hide-xs">-->
-            <!--            <li class="layui-nav-item layui-this">-->
-            <!--                <a href="https://www.lanqiao.cn/courses/4830"><i class="iconfont icon-wenda"></i>开发文档</a>-->
-            <!--            </li>-->
-            <!--            <li class="layui-nav-item">-->
-            <!--                <a href="https://github.com/ZHENFENG13/My-BBS"><i class="iconfont icon-daima"></i>源码</a>-->
-            <!--            </li>-->
-            <!--            <li class="layui-nav-item layui-this">-->
-            <!--                <a href="https://juejin.im/user/59199e22a22b9d0058279886"><i class="iconfont icon-jiaoliu"></i>交流</a>-->
-            <!--            </li>-->
-            <!--        </ul>-->
 
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
@@ -65,7 +50,7 @@
                 <th:block style="display:inline-block;" th:unless="${session.myBBSUser==null}">
                     <li class="layui-nav-item">
                         <a class="fly-nav-avatar" href="javascript:;">
-                            <cite class="layui-hide-xs" th:text="${session.myBBSUser.nickName}">程序员十三</cite>
+                            <cite class="layui-hide-xs" th:text="${session.myBBSUser.nickName}"></cite>
                             <th:block th:if="${session.myBBSUser.gender=='男'}">
                                 <i class="iconfont icon-nan"></i>
                             </th:block>
